Use JDK8 functionality for list creation