@@ -4,6 +4,7 @@ import org.apiguardian.api.API;
 
 import java.util.List;
 import java.util.ServiceLoader;
+import java.util.stream.Collectors;
 
 import static java.util.ServiceLoader.load;
 import static java.util.stream.StreamSupport.stream;
@@ -21,7 +22,7 @@ public final class ServiceLoaderSpanDecorator extends ForwardingSpanDecorator {
     }
 
     private static synchronized List<SpanDecorator> loadDecorators() {
-        return stream(load(SpanDecorator.class).spliterator(), false).toList();
+        return stream(load(SpanDecorator.class).spliterator(), false).collect(Collectors.toList());
     }
 
 }
